--- a/AI_PROJECT_final2.ipynb
+++ b/AI_PROJECT_final2.ipynb
@@ -9,10 +9,7 @@
     "# THIS IS A AI PROJECT FROM GR-8\n",
     "# ie SYSTEM FAMILY TREE\n",
     "# MEMBERS\n",
-    "# ->GURUCHARAN RAO [11804634]\n",
-    "# _>DINESH         [11804613]\n",
-    "# ->SWARNA KIRAN   [11804643]\n",
-    "# ->SRIKANTH       [11804655 ]\n",
+    "# ->GURUCHARAN RAO [11804634]\n"
     "# These relationships are specified in a file called famtree.json"
    ]
   },
